--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,13 +22,18 @@
                         <div class="col-md-6 mx-auto mt-5">
                             <div class="card stacked-form">
                                 <div class="card-header ">
-                                    <h4 class="card-title text-center text-info"><i class="fa fa-twitter"></i> Twitter</h4>
+                                    <h3 class="card-title text-center text-info"><i class="fa fa-twitter"></i> Twitter</h3>
                                     <h4 class="text-center mt-0">Sentiment Analysis</h4>
                                 </div>
                                 <form method="GET" action="/monitor">
                                 <div class="card-body ">
                                         <div class="form-group">
-                                            <input type="text" name="phrase" placeholder="Select a topic" class="form-control">
+                                        <label>Topic</label>   
+                                            <input type="text" name="phrase" placeholder="Select a topic" class="form-control" required>
+                                        </div>
+                                        <div class="form-group">
+                                            <label>Seconds to monitor</label>
+                                            <input type="number" name="seconds" placeholder="Enter seconds" class="form-control" required>
                                         </div>
                                 </div>
                                 <div class="card-footer ">
@@ -37,36 +42,14 @@
                                 </form>
                             </div>
                         </div>
-                        <div class="col-12"></div>
-                        <div class="col-md-6 mx-auto mt-5">
-                            <div class="card ">
-                                <div class="card-header ">
-                                    <h4 class="card-title text-center">Result of</h4>
-                                    <p class="card-category">Pie Chart</p>
-                                </div>
-                                <div class="card-body ">
-                                    <div id=chartPreferences class="ct-chart ct-perfect-fourth"></div>
-                                </div>
-                                <div class="card-footer ">
-                                    <div class="legend">
-                                        <i class="fa fa-circle text-info"></i> Possitive
-                                        <i class="fa fa-circle text-danger"></i> Neutral
-                                        <i class="fa fa-circle text-warning"></i> Negative
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
                     </div>
                 </div>
             </div>
         </body>
-                                        <!--   Core JS Files   -->
+
 <script src="/js/core/jquery.3.2.1.min.js" type="text/javascript"></script>
-<script src="/js/core/popper.min.js" type="text/javascript"></script>
-<script src="/js/core/bootstrap.min.js" type="text/javascript"></script>
 <!--  Chartist Plugin  -->
 <script src="/js/plugins/chartist.min.js"></script>
-<script src="/js/webfear.js?v=2.0.1" type="text/javascript"></script>
 <script type="text/javascript">
     $().ready(function() {
         Chartist.Pie("#chartPreferences", {
